--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,23 @@
+{% extends 'layout.html' %}
+{{ form.hidden_tag() }}
 {% block content %}
-{{ form.email.label }}
-{{ form.email }}
+<div class="container">
+    <form class="form-group" action="" method="POST">
+        <legend>Please Login Here</legend>
+        <fieldset>
+            <div class="form-group">
+                {{ form.email.label(class='form-control-sm d-inline-flex') }}
+                {{ form.email(class='form-control') }}
+            </div>
+            <div class="form-group">
+                {{ form.password.label(class='form-control-sm d-inline-flex') }}
+                {{ form.password(class='form-control') }}
+            </div>
+            <div class="form-group form-check-inline">
+                {{ form.remember(class='form-control form-check-input') }}
+                {{ form.remember.label(class='form-control-sm form-check-label') }}
+            </div>
+        </fieldset>
+    </form>
+</div>
 {% endblock content %}
