added a user model to the project and a pasword hashing and verification sysyte

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <form class="form-group" action="" method="POST">
-        <legend>Please Login Here</legend>
+        <legend>Please Register Here</legend>
         <fieldset>
             <div class="form-group">
                 {{ form.email.label(class='form-control-sm d-inline-flex') }}
