--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
-{{ form.hidden_tag() }}
 {% block content %}
 <div class="container">
     <form class="form-group" action="" method="POST">
         <legend>Please Login Here</legend>
         <fieldset>
+            {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.username.label(class='form-control-sm d-inline-flex') }}
                 {{ form.username(class='form-control') }}
@@ -18,8 +18,8 @@
                 {{ form.password(class='form-control') }}
             </div>
             <div class="form-group">
-                {{ form.password.label(class='form-control-sm d-inline-flex') }}
-                {{ form.password(class='form-control') }}
+                {{ form.confirm_password.label(class='form-control-sm d-inline-flex') }}
+                {{ form.confirm_password(class='form-control') }}
             </div>
             <div class="form-group">
                 {{ form.submit(class='btn btn-success btn-sm px-4 py-1') }}
