added added a save feature that adds any new blog to the database

--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -3,6 +3,7 @@
     <form action="" method="POST">
         <legend>Create A New Blog</legend>
         <fieldset class="form-box">
+            {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.title.label(class='form-control-sm btn-sm btn-light') }}
                 {{ form.title(class='form-control') }}
