--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,11 @@
 <h1>{{ title }}</h1>
 <h1>User {{current_user.username}} is logged in</h1>
 {% for blog in blogs %}
-<p>{{ blog.title }}</p>
+<div>
+    <h1>{{ blog.title }}</h1>
+    <div>
+        <p>{{ blog.content }}</p>
+    </div>
+</div>
 {% endfor %}
 {% endblock content %}
