--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -1,12 +1,15 @@
 {% macro new_blog(form) %}
 <div class="new_blog container">
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         <legend>Create A New Blog</legend>
         <fieldset class="form-box">
             {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.title.label(class='form-control-sm btn-sm btn-light') }}
                 {{ form.title(class='form-control') }}
+            </div>
+            <div class="form-control">
+                <input type="file" name="photo" class="form-control" required>
             </div>
             <div class="form-group">
                 {{ form.content.label(class='form-control-sm btn-sm btn-light') }}
