--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,8 @@
 <h1>User {{current_user.username}} is logged in</h1>
 {% for blog in blogs %}
 <div>
-    {% if blog.image_path %}
-    <img class="blog-image" src="{{ url_for('static', filename=blog.image_path) }}" alt="">
+    {% if blog.image %}
+    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
     {% endif %}
     <h1>{{ blog.title }}</h1>
     <div>
