--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -43,7 +43,7 @@
                 {{ new_blog(form) }}
             </div>
             <div class="all-blogs">
-                {{ all_blogs(blogs) }}
+                {{ all_blogs(blogs, del_form) }}
             </div>
         </div>
     </div>
