--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md mb-1">
+<nav class="navbar navbar-expand-md">
     <div class="container">
         <a href="{{ url_for('main.home')}}" class="navbar-brand mr-5 pr-4">
             <h2 class="mb-0">IV-Blogs</h2>
