--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -54,9 +54,125 @@
     border-right: #4f4943 1px solid;
 }
 
+.section-1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 5fr 3fr;
+    grid-template-areas: 'a b'
+}
+
+.section-1 a {
+    color: black;
+}
+
+.section-1 a:hover {
+    text-decoration: none;
+}
+
+.sec1-left {
+    grid-area: a;
+    height: 600px;
+    background-color: #000;
+    position: relative;
+}
+
+.blog-image {
+    width: 100%;
+}
+
+.sec1-overlay {
+    box-sizing: border-box;
+    position: absolute;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    bottom: 12%;
+    background-color: #fff
+}
+
+
+.sec1-right {
+    grid-area: b;
+    height: 600px;
+}
+
+.blog-right {
+    height: 150px;
+    display: grid;
+    border-bottom: #fff solid 1px;
+    grid-template-columns: 1fr 3fr;
+    grid-template-areas: 'a b'
+}
+
+.right-image {
+    grid-area: a;
+}
+
+.image-rounded {
+    width: 115px;
+    height: 115px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.image-rounded img {
+    height: 100%;
+    width: auto;
+}
+
+.at {
+    float: right;
+
+}
+
+.bold {
+    font-weight: bold;
+}
+
+
+/* ################################ */
+
+.section-2 {
+    border-radius: 0 !important;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'a b';
+    margin: 2rem 5rem 4rem 5rem;
+}
+
+.sec2-left {
+    grid-area: a;
+    width: 100%;
+    height: max-content;
+}
+
+.sec2-right {
+    grid-area: b;
+    width: 100%;
+    height: 100%;
+}
+
+.h-rule {
+    height: 3px;
+}
+
+.category-name {
+    border-left: #ffc107 10px solid;
+}
+
+.home {
+    background-color: #e9ecef;
+}
+
+.popular {
+    background-color: #fff !important;
+}
+
+/* ############################### */
+
 .comments {
     background: #dddddd;
-    height: 100vw;
+    height: 100%;
 }
 
 .comment-box {
@@ -136,7 +252,7 @@
     background: #dddddd;
 }
 
-.blog-row {
+hidden .blog-row {
     padding: 1rem 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
