--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,40 +1,111 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1>{{ title }}</h1>
-<h1>User {{current_user.username}} is logged in</h1>
-{% for blog in blogs %}
-<div>
-    {% if blog.image %}
-    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
-    {% endif %}
-    <h1>{{ blog.title }}</h1>
-    <div>
-        <p>{{ blog.content }}</p>
-    </div>
-    <button>comment</button>
-</div>
-<div class="comment-section">
-    <form action="" method="POST">
-        {{ blog.id }}
-        {{ form.hidden_tag() }}
-        {{ form.blog_id(value=blog.id, class='d-none') }}
-        <legend>Comment</legend>
-        <div class="form-group">
-            {{ form.content.label(class='form-control-sm btn-sm btn-light') }}
-            {{ form.content(class='form-control') }}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class='form-control-sm btn-sm btn-light') }}
-        </div>
-    </form>
-    <div class="comments-display">
-        {% for comment in comments %}
-        <p>
-            {{ comment.content }}
-        </p>
-        {% endfor %}
-    </div>
-</div>
 
-{% endfor %}
+<div class="home">
+    {% for blog in blogs %}
+    <div class="d-flex py-5">
+        <span class="border-top border-warning flex-fill h-rule d-flex align-self-center"></span>
+        <span class="mx-auto category-name p-2 mx-3">Latest</span>
+        <span class="border-top border-warning flex-fill h-rule d-flex align-self-center"></span>
+    </div>
+
+    <div class="section-1 jumbotron-fluid mb-5">
+        <a href="{{ url_for('main.article', title=blog.title) }}">
+            <div class="sec1-left">
+                <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+                <div class="sec1-overlay p-3 text-center">
+                    <h5>{{ blog.category }}</h5>
+                    <h2>{{ blog.title }}</h2>
+                    <div class="d-flex justify-content-center text-center">
+                        <p>{{blog.author.username}}</p>
+                        <p class="text-muted">{{ blog.time }}</p>
+                    </div>
+                    <div class="response px-5 border-top border-warning d-inline-flex pt-1 mt-4" id="response">
+                        <span class="mr-3"><i class="fas fa-comments pr-2"></i>{{ blog.comments.all() | length }}</span>
+                        <span class="mr-3"><i class="fas fa-thumbs-up pr-2"></i>{{ blog.likes }}</span>
+                        <span><i class="fas fa-thumbs-down pr-2"></i>{{ blog.dislikes }}</span>
+                    </div>
+                </div>
+            </div>
+        </a>
+        <div class="sec1-right ml-2 ">
+            <div class="blog-1 blog-right border-bottom border-secondary mx-2 p-3">
+                <div class="image-rounded d-flex align-items-center right-image">
+                    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+                </div>
+                <div class="right-content ml-2">
+                    <p>{{ blog.category }}</p>
+                    <h6 class="bold">{{ blog.title }}</h6>
+                    <div class="d-inline-flex at text-center">
+                        <p>{{blog.author.username}}</p>
+                        <p class="text-muted">{{ blog.time }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-2 blog-right border-bottom border-secondary mx-2 p-3">
+                <div class="image-rounded d-flex align-items-center right-image">
+                    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+                </div>
+                <div class="right-content ml-2">
+                    <p>{{ blog.category }}</p>
+                    <h6 class="bold">{{ blog.title }}</h6>
+                    <div class="d-inline-flex at text-center">
+                        <p>{{blog.author.username}}</p>
+                        <p class="text-muted">{{ blog.time }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-3 blog-right border-bottom border-secondary mx-2 p-3">
+                <div class="image-rounded d-flex align-items-center right-image">
+                    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+                </div>
+                <div class="right-content ml-2">
+                    <p>{{ blog.category }}</p>
+                    <h6 class="bold">{{ blog.title }}</h6>
+                    <div class="d-inline-flex at text-center">
+                        <p>{{blog.author.username}}</p>
+                        <p class="text-muted">{{ blog.time }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="blog-4 blog-right border-bottom border-secondary mx-2 p-3">
+                <div class="image-rounded d-flex align-items-center right-image">
+                    <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+                </div>
+                <div class="right-content ml-2">
+                    <p>{{ blog.category }}</p>
+                    <h6 class="bold">{{ blog.title }}</h6>
+                    <div class="d-inline-flex at text-center">
+                        <p>{{blog.author.username}}</p>
+                        <p class="text-muted">{{ blog.time }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="d-flex mt-5">
+        <span class="border-top border-warning flex-fill h-rule d-flex align-self-center"></span>
+        <span class="mx-auto category-name p-2 mx-3">Trending Article</span>
+        <span class="border-top border-warning flex-fill h-rule d-flex align-self-center"></span>
+    </div>
+
+    <div class="section-2 popular d-flex align-items-center">
+        <div class="sec2-right pl-3 text-center">
+            <h5>{{ blog.category }}</h5>
+            <h2>{{ blog.title }}</h2>
+            <p class="text-muted">{{ blog.content | truncate(300) }}</p>
+            <div class="d-inline-flex text-center">
+                <p>{{blog.author.username}}</p>
+                <p class="text-muted">{{ blog.time }}</p>
+            </div>
+        </div>
+        <div class="sec2-left">
+            <img class="blog-image" src="{{ url_for('static', filename=blog.image) }}" alt="">
+        </div>
+    </div>
+
+
+    {% endfor %}
+</div>
 {% endblock content %}
