--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,6 +1,72 @@
 {% extends 'layout.html' %}
 {% block content %}
 <div class="home">
+    <div class="home">
+        <div class="container mx-3 pt-3">
+            <div class="top-articles">
 
+            </div>
+            <div class="one-article">
+                <div class="">
+                    <h4 class="d-inline-flex mb-3 border-bottom border-warning">{{ article.category }}</h4>
+                </div>
+                <div class="">
+                    <h2>{{ article.title }}</h2>
+                </div>
+                <div class="border-top border-bottom border-grey d-flex">
+                    <div class="art-author d-flex flex-fill  my-2">
+                        <img src="" alt="">
+                        <h3 class="text-upper d-flex align-self-center">{{ article.author.username }}</h3>
+                    </div>
+                    <div class="art-comments d-block flex-fill pl-5  my-3 border-left border-light">
+                        <h4 class="mb-0">{{ article.comments.all() | length }}</h4>
+                        <h6 class="text-muted">Comments</h6>
+                    </div>
+                    <div class="art-comments d-block flex-fill pl-5  my-3 border-left border-light">
+                        <h4 class="mb-0">{{ article.likes }}</h4>
+                        <h6 class="text-muted">Likes</h6>
+                    </div>
+                    <div class="art-comments d-block flex-fill pl-5 my-3 border-left border-light">
+                        <h4 class="mb-0">{{ article.dislikes }}</h4>
+                        <h6 class="text-muted">Dislikes</h6>
+                    </div>
+                </div>
+                <div class="my-5 article-img">
+                    <img class="w-100" src="{{ url_for('static', filename=article.image) }}" alt="Image for:: {{ article.title }}">
+                </div>
+                <div class="posted-date mb-3">
+                    <h6>{{ article.time }}</h6>
+                </div>
+                <div class="article-content">
+                    <p class="text-secondary">
+                        {{ article.content }}
+                    </p>
+                </div>
+                <div class="comments-form">
+                    <form action="" method="POST">
+                        {{ form.csrf_token }}
+                        <legend>Leave a Comment</legend>
+                        <fieldset>
+                            <div>
+                                {{ form.blog_id(class='d-none', value=article.id) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.content.label(class='form-control-sm') }}
+                                {{ form.content(class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.submit(class='btn btn-dark') }}
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+                {% for comment in comments %}
+                <div class="comments">
+                    <p>{{ comment.content }}</p>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
