adding comments is working for each article now

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -44,6 +44,7 @@
                 {{ new_blog(form) }}
             </div>
             <div class="all-blogs dn">
+                {{ edit_form.csrf_token }}
                 {{ all_blogs(blogs, del_form, edit_form) }}
             </div>
         </div>
