--- a/app/templates/edit_blog.html
+++ b/app/templates/edit_blog.html
@@ -1,16 +1,13 @@
 {% macro edit_blog(edit_form, blog) %}
 <div class="new_blog container">
     <form action="" method="POST" enctype="multipart/form-data">
+        {{ edit_form.hidden_tag() }}
         <legend>Edit Your Blog Post</legend>
         <fieldset class="form-box">
-            {{ edit_form.hidden_tag() }}
-            {{ edit_form.blog_id(class='d-none', value=blog.title) }}
             <div class="form-group">
+                {{ edit_form.blog_id(class='d-none', value=blog.title) }}
                 {{ edit_form.title.label(class='form-control-sm btn-sm btn-light') }}
                 {{ edit_form.title(value=blog.title ,class='form-control') }}
-            </div>
-            <div class="form-group">
-                <input type="file" name="photo" class="form-control" required>
             </div>
             <div class="form-group">
                 {{ edit_form.edit_content.label(class='form-control-sm btn-sm btn-light') }}
@@ -20,6 +17,10 @@
                 {{ edit_form.category.label(class='form-control-sm btn-sm btn-light') }}
                 {{ edit_form.category(value=blog.category ,class='form-control') }}
             </div>
+            <div class="form-control">
+                <input type="file" name="photo" class="form-control" required>
+            </div>
+
             <div class="form-group">
                 {{ edit_form.submit(class='form-control-sm btn-sm btn-light') }}
             </div>
