--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -23,8 +23,12 @@
                         <h6 class="text-muted">Comments</h6>
                     </div>
                     <div class="art-comments d-block flex-fill pl-5  my-3 border-left border-light">
-                        <h4 class="mb-0">{{ article.likes }}</h4>
-                        <h6 class="text-muted">Likes</h6>
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {{ like.hidden_tag() }}
+                            {{ like.blog_id(class='d-none', value=article.id) }}
+                            <h4 class="mb-0">{{ article.likes }}</h4>
+                            {{ like.submit_like(class='text-muted btn btn-light btn-sm')}}
+                        </form>
                     </div>
                     <div class="art-comments d-block flex-fill pl-5 my-3 border-left border-light">
                         <h4 class="mb-0">{{ article.dislikes }}</h4>
@@ -60,9 +64,10 @@
                         </fieldset>
                     </form>
                 </div>
-                {% for comment in comments %}
+                {% for comment in article.comments.all() %}
                 <div class="comments">
                     <p>{{ comment.content }}</p>
+                    <p>{{ comment.time }}</p>
                 </div>
                 {% endfor %}
             </div>
