--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -48,19 +48,34 @@
                 </div>
                 <div class="collapse" id="blog-Options{{blog.id}}">
                     <form class="d-inline-flex" action="" method="POST">
-                        <fieldset>
-                            {{ del_form.hidden_tag() }}
-                            {{del_form.post_id(value=blog.id, class='d-none')}}
-                            {{ del_form.submit(class='form-control-sm btn btn-danger') }}
+                        <legend>Edit Your Blog Post</legend>
+                        <fieldset class="form-box">
+                            {{ edit_form.hidden_tag() }}
+                            <div class="form-group">
+                                {{ edit_form.blog_id(class='d-none', value=blog.title) }}
+                                {{ edit_form.title.label(class='form-control-sm btn-sm btn-light') }}
+                                {{ edit_form.title(value=blog.title ,class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ edit_form.edit_content.label(class='form-control-sm btn-sm btn-light') }}
+                                {{ edit_form.edit_content(value=blog.content ,class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ edit_form.category.label(class='form-control-sm btn-sm btn-light') }}
+                                {{ edit_form.category(value=blog.category ,class='form-control') }}
+                            </div>
+                            <div class="form-control">
+                                <input type="file" name="photoedit" class="form-control" required>
+                            </div>
+                            <div class="form-group">
+                                {{ edit_form.submit(class='form-control-sm btn-sm btn-light') }}
+                            </div>
                         </fieldset>
-                        <div class="edit-blog-form">
-                            {{ edit_blog(edit_form, blog) }}
-                        </div>
                     </form>
                     <form class="d-inline-flex" action="" method="POST">
                         <fieldset>
                             {{ del_form.hidden_tag() }}
-                            {{del_form.post_id(value=blog.title, class='d-none')}}
+                            {{ del_form.post_id(value=blog.title, class='d-none')}}
                             {{ del_form.submit(class='form-control-sm btn btn-danger') }}
                         </fieldset>
                     </form>
