--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -173,6 +173,8 @@
 .comments {
     background: #dddddd;
     height: 100%;
+    padding: 0.5rem 1rem;
+    border-left: #232221 solid 3px;
 }
 
 .comment-box {
